--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "lint:fix": "pnpm lint --fix"
   },
   "peerDependencies": {
-    "@vitest/browser": "^2.1.0-beta.4",
-    "vitest": "^2.1.0-beta.4",
+    "@vitest/browser": "^2.1.0 || ^3.0.0-0",
+    "vitest": "^2.1.0 || ^3.0.0-0",
     "vue": "^3.0.0"
   },
   "dependencies": {
@@ -62,7 +62,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.24.1",
     "@vitejs/plugin-vue": "^5.1.2",
-    "@vitest/browser": "^2.1.0-beta.4",
+    "@vitest/browser": "^2.1.8",
     "bumpp": "^9.4.2",
     "changelogithub": "^0.13.9",
     "eslint": "^9.8.0",
@@ -70,7 +70,7 @@
     "tsup": "^8.2.4",
     "tsx": "^4.16.5",
     "typescript": "^5.5.4",
-    "vitest": "^2.1.0-beta.4",
+    "vitest": "^2.1.8",
     "vue": "^3.4.35",
     "zx": "^8.1.4"
   }
