--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "dist"
   ],
   "engines": {
-    "node": "^18.0.0 || >=20.0.0"
+    "node": "^20.0.0 || ^22.0.0 || >=24.0.0"
   },
   "scripts": {
     "build": "tsup",
@@ -52,8 +52,7 @@
     "lint:fix": "pnpm lint --fix"
   },
   "peerDependencies": {
-    "@vitest/browser": "^2.1.0 || ^3.0.0 || ^4.0.0-0",
-    "vitest": "^2.1.0 || ^3.0.0 || ^4.0.0-0",
+    "vitest": "^4.0.0-0",
     "vue": "^3.0.0"
   },
   "dependencies": {
@@ -62,15 +61,14 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.24.1",
     "@vitejs/plugin-vue": "^5.1.2",
-    "@vitest/browser": "^3.0.0",
+    "@vitest/browser-playwright": "^4.0.0-beta.15",
     "bumpp": "^9.4.2",
     "changelogithub": "^0.13.9",
     "eslint": "^9.8.0",
-    "playwright": "^1.46.0",
     "tsup": "^8.2.4",
     "tsx": "^4.16.5",
     "typescript": "^5.5.4",
-    "vitest": "^3.0.0",
+    "vitest": "^4.0.0-beta.15",
     "vue": "^3.4.35",
     "zx": "^8.1.4"
   }
