--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "bumpp": "^9.4.2",
     "changelogithub": "^0.13.9",
     "eslint": "^9.8.0",
+    "playwright": "^1.55.1",
     "tsup": "^8.2.4",
     "tsx": "^4.16.5",
     "typescript": "^5.5.4",
