chore: add package.json export

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "./pure": {
       "types": "./dist/pure.d.ts",
       "default": "./dist/pure.js"
-    }
+    },
+    "./package.json": "./package.json"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
