--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vitest-browser-vue",
   "type": "module",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0",
   "packageManager": "pnpm@9.6.0",
   "description": "Render Vue components in Vitest Browser Mode",
   "author": "Vitest Team",
