chore: migrate to tsdown

--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch --sourcemap",
+    "build": "tsdown",
+    "dev": "tsdown --watch --sourcemap",
     "test": "vitest",
     "publish-ci": "tsx scripts/publish-ci.ts",
     "release": "tsx scripts/release.ts",
@@ -58,16 +58,16 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.24.1",
-    "@vitejs/plugin-vue": "^5.1.2",
-    "@vitest/browser-playwright": "^4.0.0-beta.15",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/browser-playwright": "^4.0.2",
     "bumpp": "^9.4.2",
     "changelogithub": "^0.13.9",
     "eslint": "^9.8.0",
     "playwright": "^1.55.1",
-    "tsup": "^8.2.4",
+    "tsdown": "^0.15.9",
     "tsx": "^4.16.5",
     "typescript": "^5.5.4",
-    "vitest": "^4.0.0-beta.15",
+    "vitest": "^4.0.2",
     "vue": "^3.4.35",
     "zx": "^8.1.4"
   }
